# rust-store-inventory-management-system

./: Cargo.toml  README.md  inventory.json  sales.json
data/: inventory.json
src/: auth.rs  inventory.rs  main.rs  persistence.rs  purchase.rs  report.rs  sales.rs
