[package]
name = "rust-store-inventory-management-system"
version = "0.1.0"
edition = "2024"

[dependencies]
validator = { version = "0.20.0", features = ["derive"] }
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"] }
